--- a/WinUI version/English Exam Timer/MainWindow.xaml
+++ b/WinUI version/English Exam Timer/MainWindow.xaml
@@ -2,27 +2,30 @@
 <Window x:Class="EnglishExamTimer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="G.E. Timer (v1.4.0)" Height="600" Width="1100"
-        Background="WhiteSmoke" WindowStartupLocation="CenterScreen">
+        Title="G.E. Timer (v1.4.0)">
+    <!--Height="600" Width="1100"-->
+    <!--WindowStartupLocation="CenterScreen"-->
 
-    <Grid>
+    <Grid Background="WhiteSmoke">
         <!-- Datum a čas -->
-        <Label x:Name="labelTimeDate" 
+        <TextBlock x:Name="CurrentDateandTime" 
                FontSize="28" 
                HorizontalAlignment="Left" 
-               Margin="24,19,0,0"
-               Content="Current Date and Time"/>
+               Margin="24,19,0,0"/>
 
-        <!-- Remaining Time Label -->
-        <Label Content="Remaining time:" 
+        <!-- Remaining Time TextBlock -->
+        <TextBlock x:Name="Remainingtime" 
                FontSize="24" 
                HorizontalAlignment="Left" 
                Margin="24,89,0,0"/>
-        <Label x:Name="lRemainingTime" 
-               FontSize="25" 
-               HorizontalAlignment="Left" 
-               Margin="289,89,0,0"
-               Content="000"/>
+        <!--dvojtecka u RemainingTime-->
+
+        <TextBlock x:Name="lRemainingTime"
+           FontSize="25"
+           HorizontalAlignment="Left"
+           Margin="289,89,0,0"
+           Text="000"/>
+
 
         <!-- ProgressBar -->
         <ProgressBar x:Name="ProgressBarTimer" 
@@ -32,26 +35,24 @@
                      Margin="120,350,0,0"/>
 
         <!-- Minuty a sekundy -->
-        <Label x:Name="LabelMinAndSec" 
+        <TextBlock x:Name="nulanuladvojteckanulanula" 
                FontSize="96" FontWeight="Bold"
                HorizontalAlignment="Left" 
-               Margin="582,177,0,0"
-               Content="00:00"/>
+               Margin="582,177,0,0"/>
 
         <!-- Lap Time -->
-        <Label Content="Current Lap:" 
+        <TextBlock x:Name="CurrentLap" 
                FontSize="28" 
                HorizontalAlignment="Left" 
                Margin="759,19,0,0"/>
-        <Label x:Name="lLapTime" 
+        <TextBlock x:Name="lap" 
                FontSize="28" FontWeight="Bold"
                HorizontalAlignment="Left" 
-               Margin="998,19,0,0"
-               Content="lap"/>
+               Margin="998,19,0,0"/>
+        <!--dvojtecka u current lap-->
 
         <!-- Buttons -->
-        <Button x:Name="startTimerButton" 
-                Content="Start Timer" 
+        <Button x:Name="StartTimer" 
                 FontSize="28" 
                 Background="LightGreen"
                 Width="296" Height="134"
@@ -59,8 +60,7 @@
                 Margin="15,451,0,0"
                 Click="StartTimerButton_Click"/>
 
-        <Button x:Name="pauseTimerButton" 
-                Content="Pause Timer" 
+        <Button x:Name="PauseTimer" 
                 FontSize="28" 
                 Background="Linen"
                 Width="304" Height="134"
@@ -68,8 +68,7 @@
                 Margin="317,451,0,0"
                 Click="PauseTimerButton_Click"/>
 
-        <Button x:Name="stopAndResetTimerButton" 
-                Content="Stop and Reset Timer" 
+        <Button x:Name="StopandResetTimer" 
                 FontSize="22" 
                 Background="MistyRose"
                 Width="284" Height="133"
@@ -77,8 +76,7 @@
                 Margin="627,451,0,0"
                 Click="StopAndResetTimerButton_Click"/>
 
-        <Button x:Name="bModifyTimer" 
-                Content="⚙️" 
+        <Button x:Name="ModifyTimer" 
                 FontSize="42" 
                 Background="Silver"
                 Width="184" Height="134"
@@ -87,8 +85,7 @@
                 Click="ButtonModifyTimer_Click"/>
 
         <!-- Checkbox -->
-        <CheckBox x:Name="ChbWantLoop" 
-                  Content="Loop"
+        <CheckBox x:Name="Loop"
                   FontSize="36" 
                   IsChecked="True"
                   HorizontalAlignment="Left"
