--- a/WinUI version/English Exam Timer/MainWindow.xaml
+++ b/WinUI version/English Exam Timer/MainWindow.xaml
@@ -10,7 +10,7 @@
     <!--Height="600" Width="1100"-->
     <!--WindowStartupLocation="CenterScreen"-->
 
-    <Grid Background="WhiteSmoke">
+    <Grid x:Name="RootGrid" Background="WhiteSmoke">
         <!-- Datum a čas -->
         <TextBlock x:Name="CurrentDateandTime" 
                Text="Current Date and Time"
