--- a/WinUI version/English Exam Timer/MainWindow.xaml
+++ b/WinUI version/English Exam Timer/MainWindow.xaml
@@ -71,7 +71,7 @@
         <Button x:Name="PauseTimer" 
                 Content="Pause"
                 FontSize="28" 
-                Background="Linen"
+                Background="Bisque"
                 Width="304" Height="134"
                 HorizontalAlignment="Left"
                 Margin="317,451,0,0"
@@ -106,6 +106,7 @@
                   x:Name="LoopTS"
                   FontSize="24" 
                   IsOn="True"
+                  AutomationProperties.Name="LoopTS_IsOn"  
                   HorizontalAlignment="Left"
                   Margin="934,379,0,0"/>
         <!-- AutomationProperties.Name="LoopTS"-->
