--- a/WinUI version/English Exam Timer/MainWindow.xaml
+++ b/WinUI version/English Exam Timer/MainWindow.xaml
@@ -95,20 +95,12 @@
                 Margin="917,450,0,0"
                 Click="ButtonModifyTimer_Click"/>
 
-        <!-- Checkbox
-        <CheckBox x:Name="Loop"
-                  FontSize="36" 
-                  IsChecked="True"
-                  HorizontalAlignment="Left"
-                  Margin="934,379,0,0"
-                  Checked="ChbWantLoop_CheckedChanged"/> -->
         <ToggleSwitch 
                   x:Name="LoopTS"
                   FontSize="24" 
+                  Toggled="LoopTS_IsOn"
                   IsOn="True"
-                  AutomationProperties.Name="LoopTS_IsOn"  
                   HorizontalAlignment="Left"
                   Margin="934,379,0,0"/>
-        <!-- AutomationProperties.Name="LoopTS"-->
     </Grid>
 </Window>
