--- a/WinUI version/English Exam Timer/ModifyTimerDialog.xaml
+++ b/WinUI version/English Exam Timer/ModifyTimerDialog.xaml
@@ -1,24 +1,32 @@
+<?xml version="1.0" encoding="utf-8"?>
 <ContentDialog
     x:Class="English_Exam_Timer.ModifyTimerDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="using:English_Exam_Timer"
-    Title="Upravit èasy lapù"
-    PrimaryButtonText="Uložit"
-    CloseButtonText="Zavøít"
-    DefaultButton="Primary">
+	mc:Ignorable="d"
+    Title="Upravit fÃ¡ze ÄasovaÄe"
+    PrimaryButtonText="UloÅ¾it"
+    CloseButtonText="ZruÅ¡it"
+    PrimaryButtonClick="ContentDialog_PrimaryButtonClick">
 
-    <StackPanel Spacing="12" Margin="0,10,0,0">
-        <TextBlock Text="Lap 1 (sekundy):" />
-        <TextBox x:Name="Lap1Box" InputScope="Number" />
+    <StackPanel Spacing="10">
+        <ListView x:Name="PhasesListView" Height="300"
+                  IsItemClickEnabled="True" ItemClick="PhasesListView_ItemClick">
+            <ListView.ItemTemplate>
+				<DataTemplate x:DataType="local:PhaseTime">
+					<StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" ContextRequested="Phase_ContextRequested">
+						<TextBlock Text="{Binding Name}" Width="200" VerticalAlignment="Center"/>
+						<TextBlock Text="{Binding DurationSeconds}" Width="50" VerticalAlignment="Center"/>
+					</StackPanel>
+				</DataTemplate>
+			</ListView.ItemTemplate>
+        </ListView>
 
-        <TextBlock Text="Lap 2 (sekundy):" />
-        <TextBox x:Name="Lap2Box" InputScope="Number" />
-
-        <TextBlock Text="Lap 3 (sekundy):" />
-        <TextBox x:Name="Lap3Box" InputScope="Number" />
-
-        <TextBlock Text="Lap 4 (sekundy):" />
-        <TextBox x:Name="Lap4Box" InputScope="Number" />
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Spacing="10">
+            <Button Content="PÅ™idat" Click="AddButton_Click"/>
+        </StackPanel>
     </StackPanel>
 </ContentDialog>
