Fixed crash with phasedialog
Fixed an issue, which caused mishandling of the PhaseTime dialog.
It would then crash instead of throwing visual feedback.

--- a/WinUI version/English Exam Timer/ModifyTimerDialog.xaml
+++ b/WinUI version/English Exam Timer/ModifyTimerDialog.xaml
@@ -13,6 +13,12 @@
     PrimaryButtonClick="ContentDialog_PrimaryButtonClick">
 
     <StackPanel Spacing="10">
+        <TextBlock x:Name="ErrorTextBlock"
+                   Foreground="Red"
+                   Visibility="Collapsed"
+                   TextWrapping="Wrap"
+                   FontSize="14"/>
+        
         <ListView x:Name="PhasesListView" Height="300"
                   IsItemClickEnabled="True" ItemClick="PhasesListView_ItemClick">
             <ListView.ItemTemplate>
